backend/ingress/backend-ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: backend-ingress
spec:
  controller: k8s.io/backend-ingress-nginx
