backend/ingress/backend-ingress-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-ingress-controller
  namespace: jiome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-ingress-controller
  template:
    metadata:
      labels:
        app: backend-ingress-controller
    spec:
      containers:
        - name: controller
          image: k8s.gcr.io/ingress-nginx/controller:v1.7.0
          args:
            - /nginx-ingress-controller
            - '--ingress-class=backend-ingress'
            - '--controller-class=k8s.io/backend-ingress-nginx'
          ports:
            - containerPort: 80
