backend/ingress/backend-ingress-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-ingress-controller
  namespace: jiome
spec:
  type: ClusterIP
  selector:
    app: backend-ingress-controller
  ports:
    - name: http
      port: 80
      targetPort: 80
